[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morningpy"                  
version = "0.1.0"
description = "A Python wrapper to fetch financial data from Morningstar"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["finance", "morningstar", "investing", "stocks", "ETF"]
authors = [
    { name = "Thomas Piton"}
]
urls = {
    "Homepage" = "https://github.com/ThomasPiton/morningpy",
    "Repository" = "https://github.com/ThomasPiton/morningpy"
}

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
]

[project.optional-dependencies]
dev = [
]
docs = [
]

[tool.setuptools.packages.find]
where = ["morningpy"]      # Root package folder
include = ["morningpy*"]
exclude = ["tests*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"morningpy" = ["data/*.parquet", "data/*.json"]